--- a/src/js/style.css
+++ b/src/js/style.css
@@ -749,6 +749,24 @@
 	cursor: pointer;
 }
 
+.swish-core-files-option {
+	flex-direction: column;
+	align-items: flex-start;
+	margin-top: 12px;
+	padding-top: 12px;
+	border-top: 1px solid #eee;
+}
+
+.swish-core-files-option label {
+	margin-bottom: 4px;
+}
+
+.swish-core-files-hint {
+	margin: 0 0 0 22px;
+	font-size: 12px;
+	color: #666;
+}
+
 /* ==========================================================================
    Backup Type Selector
    ========================================================================== */
